# llm_api_agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: main.yml
src/: app.py  conf.py  main.py
src/application/: ports.py
src/application/agent/: service.py
src/application/anthropic/: service.py
src/application/deepseek/: service.py
src/application/google/: service.py
src/application/mock/: service.py
src/application/zai/: service.py
src/controllers/: llm.py
src/domain/: chat_settings.py  models.py
src/infrastructure/: di.py  exception_handler.py  exceptions.py
src/infrastructure/gateways/: anthropic_gateway.py  deepseek_gateway.py  google_gateway.py  mock_gateway.py  zai_gateway.py
src/infrastructure/logging/: trace.py
tests/e2e/: test_llm_flow.py
tests/unit/: test_agent_service.py  test_anthropic_gateway.py  test_anthropic_service.py  test_chat_settings.py  test_deepseek_gateway.py  test_deepseek_service.py  test_exception_handler.py  test_google_gateway.py  test_google_service.py  test_mock_service.py  test_zai_gateway.py  test_zai_service.py
