[project]
name = "scripulya-agent"
version = "0.1.0"
description = "LLM-provider agent service: consumes chat requests over RabbitMQ and returns provider-generated replies."
requires-python = "==3.13.*"
dependencies = [
    "anthropic>=0.111.0",
    "dishka>=1.10.1",
    # FastStream integration ships in-tree with dishka 1.10.x (used via
    # `from dishka.integrations.faststream import ...`); it emits a deprecation
    # warning nudging toward the standalone `dishka-faststream` package, which
    # can be adopted once it has a build matching faststream 0.6.
    "faststream[rabbit]==0.6.7",
    "google-genai>=2.9.0",
    "openai>=2.43.0",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120
extend-exclude = ["venv", ".venv"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.13",
]

[pytest]
markers = [
    "unit: marks tests as unit tests",
    "e2e: marks tests as e2e tests",
]
